[package]
name = "section02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
tokio = {version = "1.6.1", features = ["full"]}
async-std = {version = "1.9.0", features = ["attributes"]}
async-trait = "0.1.50"
