[package]
name = "section04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#p152の1行目にてdependencies書き換え指示がある
clap = { version = "3.0.0", features = ["derive"]}
#p176の指示
anyhow = "1.0.40"
#p179の指示
thiserror = "1.0.25"
