[package]
name = "section02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#p190でのインストール指示
actix-rt = "2.2.0"
actix-web = "3.3.2"
#p193でのインストール指示
thiserror = "1.0.25"
#198でのインストール指示
askama = "0.10.5"