[package]
name = "section03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#p190でのインストール指示
actix-rt = "2.2.0"
actix-web = "3.3.2"
#p193でのインストール指示
thiserror = "1.0.25"
#198でのインストール指示
askama = "0.10.5"
#p203でtomlファイルの編集指示
rusqlite = { version = "0.25.3", features = ["bundled"]}
#p203でのインストール指示
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"